--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="static/style.css">
+    <title>{{title}}</title>
 </head>
+    <h1>Rock Paper Scissors</h1>
 <body>
-    
+    <p>
+    {% if player1 == "rock" and player2 == "rock" %}
+    It's a DRAW!
+    {% endif %}
+    </p>
 </body>
 </html>
