--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
-    <title>{{title}}</title>
+    <title>/{{title}}</title>
 </head>
     <h1>Rock Paper Scissors</h1>
 <body>
-    <p>
-    {% if player1 == "rock" and player2 == "rock" %}
-    It's a DRAW!
-    {% endif %}
-    </p>
+   <h2>Please input Player 1's choice, then Player 2's choice in the browser to find out result</h2>
+   <h2>i.e. rock/paper</h2>
 </body>
 </html>
