--- a/app/templates/game_result.html
+++ b/app/templates/game_result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app/static/game_result.css">
+    <link rel="stylesheet" href="static/game_result.css">
     <title>Game Result</title>
 </head>
     <h1>The result of the game is:</h1>
