--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,9 @@
 </head>
     <h1>Rock Paper Scissors</h1>
 <body>
-   <h2>Please input Player 1's choice, then Player 2's choice in the browser to find out result</h2>
-   <h2>i.e. rock/paper</h2>
+    <hgroup>
+        <h2>Please input Player 1's choice, then Player 2's choice in the browser to find out result</h2>
+        <h2>i.e. rock/paper</h2>
+    </hgroup>
 </body>
 </html>
