--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,10 +5,23 @@ h1 {
     font-style: italic;
     border-style:double;
     border-color:black;
-    padding: 4px;
+    padding: 16px;
     text-align: center;
 }
 
 h2 {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: darkblue;
+    background-color: white;
+    font-style: italic;
+    padding: 10px;
+}
+
+hgroup {
     text-align: center;
+}
+
+body {
+    background-image: url(../static/RPS.jpg);
+    background-position: center;
 }
