--- a/app/static/game_result.css
+++ b/app/static/game_result.css
@@ -1,14 +1,3 @@
-body > h2 {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: darkblue;
-    background-color: lightblue;
-    font-style: italic;
-    border-style:double;
-    border-color:black;
-    padding: 4px;
-    text-align: center;
-}
-
 .result {
-    color: yellow;
+    color: yellowgreen
 }
