--- a/app/templates/game_result.html
+++ b/app/templates/game_result.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/game_result.css">
-    <title>Game Result</title>
-</head>
-    <h1>The result of the game is:</h1>
+{% extends "index.html" %}
+{% block content %}
 <body>
-    <h2 class="result">{{outcome}}</h2>
+    <h1 style="color: green">The result of the game is:</h1>
+    <h2 style="color: green">{{outcome}}</h2>
+    <h2>The result against the PC is:</h2>
+    <h2 style="color: green">{{outcome_vs_pc}}</h2>
 </body>
-</html>
+{% endblock %}
