--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,11 @@
         <h3>Paper beats rock</h3>
         <h3>Scissors beats paper</h3>
     </hgroup>
+    <div>
+        <form action="http://127.0.0.1:5000/play">
+            <input class="pc_button" type="submit" value="Play the PC" />
+        </form>
+    </div>
     {% block content %}
     
     {% endblock %}
